--- a/GE_RealEstate/templates/nav_footer/footer.html
+++ b/GE_RealEstate/templates/nav_footer/footer.html
@@ -1,7 +1,7 @@
 <footer id="main-footer" class="py-4 bg-primary text-white text-center">
   <div></div>
-    Copyright &copy;
-    <span class="year"></span> Gibran Esparza Realtors
+    &copy;
+    2020 Gibran Esparza Realtors
     
       <div class="social text-center">
           <a href="#">
