--- a/GE_RealEstate/GE_RealEstate/static/css/style.css
+++ b/GE_RealEstate/GE_RealEstate/static/css/style.css
@@ -58,10 +58,34 @@ img {
     background: rgba(134, 32, 32, 0.8); }
 
 #showcase-inner {
-  background: url("../bricks.jpg") no-repeat center fixed;
   position: relative;
   overflow: hidden;
   min-height: 200px; }
+  video {
+    object-fit: cover;
+    width: 100vw;
+    height: 50vh;
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
+  .viewport-header {
+    position: relative;
+    height: 25vh;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  #bc {
+    position: relative;
+    width: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+  }
+  
   #showcase-inner::before {
     content: '';
     position: absolute;
@@ -69,12 +93,13 @@ img {
     left: 0;
     min-height: 100%;
     width: 100%;
-    background:rgba(134, 32, 32, 0.8); }
+    ; }
   #showcase-inner.showcase-search {
     min-height: 270px; }
 
 #work {
-  padding: 6rem 0; }
+  padding: 6rem 0; 
+  }
 
 .listing-preview a {
   position: relative; }
