--- a/GE_RealEstate/templates/dashboard/about.html
+++ b/GE_RealEstate/templates/dashboard/about.html
@@ -4,43 +4,110 @@
 
 {% block content %}
 <section id="showcase-inner" class="py-5 text-white">
+  <video id="video" playsinline autoplay muted loop poster="{% static 'bricks.jpg' %}" id="bgvid"
+    src="{% static 'PSKyline.mp4' %}" autoplay loop playsinline
+    muted></video>
+  <header class="viewport-header ">
+    <h1>
+      Gibran Esparza
+      <span>Realty Co.</span>
+    </h1>
+  </header>
+</section>
+
+
+
+<section id="about" class="py-2 text-center">
+  <div class="container">
     <div class="container">
-      <div class="row text-center">
-        <div class="col-md-12">
-          <h1 class="display-4">Gibran Esparza Realty</h1>
+			<h3 class="bodHead">About Gibran Esparza Realty Co.</h3>
+			<hr class="rdLine">
+            <p>
+        Gibran Esparza Realty has been in business for years. Serving the needs of our clients in helping them attain the house of their Dreams. We are here to help wether you are a new home
+        owner or an experienced home buyer looking for something new.
+			</p>
+			<p>
+        Gibran Esparza Realty has all the tools and resources needed to help you make your home buying dreams come true. Our experienced <a href="{% url 'realtors' %}">team </a>
+        is here to help you with any questions you may have.
+			</p>
+		</div>
+</section>
+
+
+<section id="work" class="bg-dark text-white text-center">
+  <h2 class="display-4">Making Dreams Come true One House at a Time!</h2>
+  <hr>
+  <div class="search">
+    <form action="{% url 'search' %}">
+    
+      <div class="form-row">
+        <div class="col-md-6 ">
+          <label class="sr-only">City</label>
+          <input v-model="city" type="text" name="city" class="form-control" placeholder="City">
         </div>
-      </div>
-    </div>
-  </section>
+        <div class="col-md-6 mb-6">
+          <label class="sr-only">State</label>
+          <select  v-model="state" name="state" class="form-control" placeholder="State">
+            <option selected="true" disabled="disabled">State </option>
+            <option value="AL">Alabama</option>
+            <option value="AK">Alaska</option>
+            <option value="AZ">Arizona</option>
+            <option value="AR">Arkansas</option>
+            <option value="CA">California</option>
+            <option value="CO">Colorado</option>
+            <option value="CT">Connecticut</option>
+            <option value="DE">Delaware</option>
+            <option value="DC">District Of Columbia</option>
+            <option value="FL">Florida</option>
+            <option value="GA">Georgia</option>
+            <option value="HI">Hawaii</option>
+            <option value="ID">Idaho</option>
+            <option value="IL">Illinois</option>
+            <option value="IN">Indiana</option>
+            <option value="IA">Iowa</option>
+            <option value="KS">Kansas</option>
+            <option value="KY">Kentucky</option>
+            <option value="LA">Louisiana</option>
+            <option value="ME">Maine</option>
+            <option value="MD">Maryland</option>
+            <option value="MA">Massachusetts</option>
+            <option value="MI">Michigan</option>
+            <option value="MN">Minnesota</option>
+            <option value="MS">Mississippi</option>
+            <option value="MO">Missouri</option>
+            <option value="MT">Montana</option>
+            <option value="NE">Nebraska</option>
+            <option value="NV">Nevada</option>
+            <option value="NH">New Hampshire</option>
+            <option value="NJ">New Jersey</option>
+            <option value="NM">New Mexico</option>
+            <option value="NY">New York</option>
+            <option value="NC">North Carolina</option>
+            <option value="ND">North Dakota</option>
+            <option value="OH">Ohio</option>
+            <option value="OK">Oklahoma</option>
+            <option value="OR">Oregon</option>
+            <option value="PA">Pennsylvania</option>
+            <option value="RI">Rhode Island</option>
+            <option value="SC">South Carolina</option>
+            <option value="SD">South Dakota</option>
+            <option value="TN">Tennessee</option>
+            <option value="TX">Texas</option>
+            <option value="UT">Utah</option>
+            <option value="VT">Vermont</option>
+            <option value="VA">Virginia</option>
+            <option value="WA">Washington</option>
+            <option value="WV">West Virginia</option>
+            <option value="WI">Wisconsin</option>
+            <option value="WY">Wyoming</option>
+          </select>
+        </div>
+      <button v-on:click="getData()" class="btn btn-secondary btn-block mt-4" type="submit"> Find a Home </button>
+    </form>
+  </div>
+</section>
 
-  <section id="bc" class="mt-3">
-    <div class="container">
-      <nav aria-label="breadcrumb">
-        <ol class="breadcrumb">
-          <li class="breadcrumb-item">
-            <a href="index.html">
-              <i class="fas fa-home"></i> Home</a>
-          </li>
-          <li class="breadcrumb-item active"> About</li>
-        </ol>
-      </nav>
-    </div>
-  </section>
-
-  <section id="about" class="py-2 text-center">
-    <div class="container">
-      </div>
-    </div>
-  </section>
-
-
-  <section id="work" class="bg-dark text-white text-center">
-    <h2 class="display-4">We Work For You</h2>
-    <hr>
-    <a href="listings.html" class="btn btn-secondary text-white btn-lg">View Our Featured Listings</a>
-  </section>
 
 
 
-  
 {% endblock %}
