--- a/GE_RealEstate/templates/dashboard/base.html
+++ b/GE_RealEstate/templates/dashboard/base.html
@@ -11,11 +11,13 @@
     
     
 
-    <script defer src="{% static 'js/main.js' %}"></script>
+   <script defer src="{% static 'js/main.js' %}"></script> 
     
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <link rel="stylesheet" href="{% static 'css/all.css' %}">
     <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet"> 
     
 
     
@@ -23,18 +25,14 @@
 </head>
 <body>
    
-    {% include 'partials/navbar.html' %}
+    {% include 'nav_footer/navbar.html' %}
     
     <div id="app">
         {% block content %}
         {% endblock %}
     </div>
     
-    {% include 'partials/footer.html' %}
-
-    
-    
-
+    {% include 'nav_footer/footer.html' %}
 
 </body>
 </html>
