--- a/GE_RealEstate/templates/listings/listings.html
+++ b/GE_RealEstate/templates/listings/listings.html
@@ -5,19 +5,7 @@
 
 {% block content %}
 
-<section id="bc" class="mt-3">
-    <div class="container">
-      <nav aria-label="breadcrumb">
-        <ol class="breadcrumb">
-          <li class="breadcrumb-item">
-            <a href="{% url 'index' %}">
-              <i class="fas fa-home"></i> Home</a>
-          </li>
-          <li class="breadcrumb-item active"> Browse Listings</li>
-        </ol>
-      </nav>
-    </div>
-  </section>
+
 
   <section id="listings" class="py-4">
     <div class="container">
@@ -28,14 +16,10 @@
           <div class="col-md-6 col-lg-4 mb-4">
             <div class="card listing-preview">
               <img class="card-img-top" src="{{ listing.photo1.url }}" alt="">
-              <div class="card-img-overlay">
-                <h2>
-                  <span class="badge badge-secondary text-white"> ${{ listing.price|intcomma }}</span>
-                </h2>
-              </div>
               <div class="card-body">
                 <div class="listing-heading text-center">
                   <h4 class="text-primary">{{ listing.address }}</h4>
+                  <h4 class="text-primary">${{ listing.price|intcomma  }}</h4>
                   <p>
                     <i class="fas fa-map-marker text-secondary"></i> {{ listing.city }}, {{ listing.state }}, {{ listing.zipcode }}</p>
                 </div>
@@ -56,10 +40,6 @@
                 <div class="row py-2 text-secondary">
                   <div class="col-12">
                     <i class="fas fa-user"></i> Realtor: {{listing.realtor}}</div>
-                </div>
-                <div class="row text-secondary pb-2">
-                  <div class="col-6">
-                    <i class="fas fa-clock"></i> {{listing.list_date|timesince}}</div>
                 </div>
                 <hr>
                 <a href="{% url 'listing' listing.id %}" class="btn btn-primary btn-block">More Info</a>
