--- a/GE_RealEstate/templates/nav_footer/navbar.html
+++ b/GE_RealEstate/templates/nav_footer/navbar.html
@@ -44,7 +44,7 @@
         {% endif %}
         
         >
-            <a class="nav-link" href="{% url 'listings' %}">Featured Listings</a>
+            <a class="nav-link" href="{% url 'listings' %}">Listings</a>
         </li>
         <li 
         
@@ -58,19 +58,57 @@
             <a class="nav-link" href="{% url 'realtors' %}">Realtors</a>
         </li>
         </ul>
-
         <ul class="navbar-nav ml-auto">
-        <li class="nav-item mr-3">
-            <a class="nav-link" href="register.html">
-            <i class="fas fa-user-plus"></i> Register</a>
-        </li>
-        <li class="nav-item mr-3">
-            <a class="nav-link" href="login.html">
-            <i class="fas fa-sign-in-alt"></i>
+            {% if request.user.is_anonymous %}
+            <li 
+            {% if "signup" in request.path %}
+            class="nav-item active mr-3"
+            {% else %}
+            class="nav-item  mr-3"
+            {% endif %}
+            
+            
+            >
+              <a class="nav-link" href="{% url 'users:signup' %}">
+                <i class="fas fa-plus-square"></i> Signup</a>
+            </li>
+            <li 
+            {% if "login" in request.path %}
+            class="nav-item active mr-3"
+            {% else %}
+            class="nav-item  mr-3"
+            {% endif %}
+            
+            >
+              <a class="nav-link" href="{% url 'users:login' %}">
+                <i class="fas fa-door-open"></i>
+  
+                Login</a>
+            </li>
+            {% else %}
+            <li 
+            {% if "dashboard" in request.path %}
+            class="nav-item active mr-3"
+            {% else %}
+            class="nav-item  mr-3"
+            {% endif %}
+            
+            >
+              <a class="nav-link" href="{% url 'users:dashboard' %}">
+                <i class="fas fa-columns"></i>
+  
+                Dashboard</a>
+            </li>
+            <li >
+              <a class="nav-link" href="{% url 'users:logout' %}">
+                <i class="fas fa-door-open"></i>
+  
+                Logout </a>
+            </li>
+            {% endif %}
 
-            Login</a>
-        </li>
-        </ul>
+          </ul>
+        
     </div>
     </div>
 </nav>
